# crucible-community

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTION_POLICY.md  README.md  docker-compose.bat
service/: Dockerfile  Dockerfile.worker  pyproject.toml  requirements.txt
service/app/: main.py
service/app/api/: __init__.py  deps.py
service/app/api/routers/: __init__.py  artifacts.py  audit.py  auth.py  debug_settings.py  health.py  intake.py  knights.py  license.py  metrics.py  models.py  quality.py  security.py  sessions.py  user.py  user_models.py  user_settings.py
service/app/api/utils/: audit.py
service/app/core/: circuit_breaker.py  config.py  encryption.py  exceptions.py  llm_rate_limit_tracker.py  logging.py  metrics.py  model_quality_tracker.py  password.py  quality_analytics.py  quality_storage.py  redis.py  redis_helpers.py  scan_filter_middleware.py  security.py  security_middleware.py  session_store.py
service/app/data/: knight_seeds.py  model_catalog.py
service/app/db/: base.py  session.py
service/app/models/: __init__.py  audit_log.py  knight.py  model_catalog.py  session.py  session_event.py  share_token.py  user.py  user_account.py  user_settings.py
service/app/schemas/: __init__.py  auth.py  events.py  knight.py  model.py  session.py  user.py  user_settings.py
service/app/services/artifacts/: audit.py  debate_pdf_generator.py  generator.py  (+6 more)
service/app/websocket/: manager.py
service/app/workers/: celery_app.py  tasks.py
service/scripts/: hash_password.py  init_community_db.py  seed_knights.py  seed_models.py  validate_env.py
(+282 files in other folders)
